--- a/src/Components/Transactions.css
+++ b/src/Components/Transactions.css
@@ -1,3 +1,9 @@
+.transactions-section {
+  width: 895px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .transaction-month-header {
   font-size: 0.6rem;
   font-weight: 500;
