--- a/src/Helpers/GlobalStyles.css
+++ b/src/Helpers/GlobalStyles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins");
-:root {
-  --responsive-base: 1;
+
+* {
+  box-sizing: border-box;
 }
 
 body {
